[package]
name = "krypty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "krypty"
path = "src/lib/mod.rs"


[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
hex = "0.4.3"
rand = "0.8.5"
thiserror = "1.0.38"
